--- a/index.html
+++ b/index.html
@@ -7,34 +7,30 @@
 <body>
   <h2>按一下就複製 再Ctrl+V貼上</h2>
 
-  <button onclick="toggleEdit()" id="editBtn">啟用編輯模式</button>
+<button onclick="toggleEdit()" id="editBtn" style="margin-bottom: 40px;">啟用編輯模式</button>
 
-
-
-
-  
   <div>
-    <button onclick="copyText('name')">複製姓名</button>
+    <button onclick="copyText('name')" style="margin-bottom: 20px;">複製姓名</button>
     <input id="name" value="吃飽太閒" readonly>
   </div>
 
   <div>
-    <button onclick="copyText('phone')">複製電話</button>
+    <button onclick="copyText('phone')" style="margin-bottom: 20px;">複製電話</button>
     <input id="phone" value="0912345678" readonly>
   </div>
 
   <div>
-    <button onclick="copyText('email')">複製信箱</button>
+    <button onclick="copyText('email')" style="margin-bottom: 20px;">複製信箱</button>
     <input id="email" value="123@gmail.com" readonly>
   </div>
 
   <div>
-    <button onclick="copyText('card8')">複製信用卡號8碼</button>
+    <button onclick="copyText('card8')" style="margin-bottom: 20px;">複製信用卡號8碼</button>
     <input id="card8" value="12345678" readonly>
   </div>
 
   <div>
-    <button onclick="copyText('card16')">複製信用卡號16碼</button>
+    <button onclick="copyText('card16')" style="margin-bottom: 20px;">複製信用卡號16碼</button>
     <input id="card16" value="1234567812345678" readonly>
   </div>
 
